# rock

./: Cargo.toml  README.md  clean_code.sh
evo/: Cargo.toml
evo/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
parse/: Cargo.toml
parse/src/: lib.rs
reduce/: Cargo.toml
reduce/src/: lib.rs
rock/: Cargo.toml
rock/src/: lib.rs  noun.rs  parse.rs  reduce.rs
