[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse = { path = "../parse" }
syn = { version = "2.0.27", features = ["full"] }
quote = "1.0.31"
proc-macro2 = "1.0.66"

